packaging/kubernetes/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white-pages-demo
  namespace: NAMESPACE
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      name: white-pages-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: white-pages-demo
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: name
                operator: In
                values:
                - white-pages-demo
            topologyKey: kubernetes.io/hostname
      containers:
      - image: registry.registry.svc.cluster.local:5000/NAMESPACE/white-pages:BRANCH
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 15
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 8
        name: white-pages
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 4
        resources:
          limits:
            cpu: 100m
            memory: 320Mi
          requests:
            cpu: 50m
            memory: 256Mi
        volumeMounts:
        - mountPath: /etc/apache2/apache2.conf
          name: apache-config
          subPath: apache2.conf
        - mountPath: /etc/apache2/sites-enabled/000-default.conf
          name: apache-config
          subPath: virtualhost.conf
        - mountPath: /run/apache2
          name: tmp
          subPath: run
        - mountPath: /var/log/apache2
          name: tmp
          subPath: logs
        - mountPath: /var/www/conf/config.inc.local.php
          name: white-pages-config
          subPath: config.php
        - mountPath: /var/www/templates_c
          name: tmp
          subPath: site
      securityContext:
        runAsUser: 1000
      volumes:
      - emptyDir: {}
        name: tmp
      - configMap:
          name: white-pages-demo
        name: apache-config
      - secret:
          secretName: white-pages-demo
        name: white-pages-config
      - configMap:
          name: white-pages-demo
          defaultMode: 0777
        name: white-pages-scripts
---
apiVersion: v1
kind: Service
metadata:
  name: white-pages-demo
  namespace: NAMESPACE
spec:
  ports:
  - name: tcp-8080
    port: 8080
  selector:
    name: white-pages-demo
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: white-pages-demo
  namespace: NAMESPACE
spec:
  rules:
  - host: white-pages.DOMAIN
    http:
      paths:
      - backend:
          serviceName: white-pages-demo
          servicePort: 8080
